--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -2,8 +2,7 @@
 import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import styles from '../../styles/CodeBlock.module.css'
-import { slugify, formatDate } from "../../js/utils"
-import { Icon } from 'astro-icon';
+import { formatDate } from "../../lib/utils"
 
 export async function getStaticPaths() {
   const allPosts = await getCollection("posts")
