--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -1,9 +1,6 @@
 ---
-import { formatDate, isWithinLastFortnite } from "../js/utils";
+import { formatDate, isWithinLastFortnite } from "../lib/utils";
 import { Icon } from "astro-icon";
-
-const darkBg = "#333";
-const lightBg = "#fff";
 const { date, href, title, description, last } = Astro.props;
 ---
 
@@ -27,105 +24,3 @@ const { date, href, title, description, last } = Astro.props;
     </div>
   </div>
 </a>
-
-<!-- <style define:vars={{ lightBg, darkBg }}>
-  p {
-    margin: 0;
-    padding: 0;
-  }
-
-  a {
-    color: inherit;
-  }
-
-  /* a:hover .wrapper {
-    outline: 2px dotted var(--primary-color);
-  } */
-
-  a:focus .wrapper {
-    outline: 2px dotted var(--primary-color);
-    background: var(--selection-color);
-  }
-
-  a:hover p {
-    box-shadow: none;
-    text-shadow: none;
-  }
-
-  a:focus p {
-    box-shadow: none;
-    text-shadow: none;
-  }
-
-  .wrapper {
-    border-radius: 8px;
-    padding: 0.75rem;
-    position: relative;
-  }
-
-  .post {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .date {
-    font-size: 0.75rem;
-    opacity: 0.75;
-  }
-
-  .last {
-    margin-bottom: 4rem;
-  }
-
-  .container {
-    border-radius: 0.5rem;
-  }
-
-  .container:hover,
-  .container:focus {
-    background: #e9e9e9;
-  }
-
-  :global(.dark) .container:hover,
-  .container:focus {
-    background: #333333;
-  }
-
-  .title {
-    width: 70%;
-    display: flex;
-    align-items: center;
-  }
-
-  .title h4 {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    font-size: 1.125rem;
-    font-weight: 600;
-  }
-
-  .dateWrapper {
-    display: flex;
-    align-items: center;
-  }
-
-  .date {
-    min-width: 25%;
-    text-align: right;
-    white-space: nowrap;
-    margin-left: 0.5rem;
-  }
-
-  .desc {
-    font-size: 0.875rem;
-    margin-top: 0.5rem;
-  }
-
-  @media (min-width: 40rem) {
-    .title {
-      width: 75%;
-    }
-  }
-</style> -->
