add command bar back

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -13,7 +13,7 @@ import { CommandBar } from "./CommandBar";
   </a>
   </span>
   <span class="flex gap-2">
-  <!-- <CommandBar client:load/> -->
+  <CommandBar client:load/>
   <!-- <ThemeSelector client:load /> -->
   </span>
 </nav>
