--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,5 @@
 ---
-import ThemeSelector from "../components/ThemeSelector";
+// import ThemeSelector from "../components/ThemeSelector";
 import { CommandBar } from "./CommandBar";
 ---
 
@@ -14,6 +14,6 @@ import { CommandBar } from "./CommandBar";
   </span>
   <span class="flex gap-2">
   <CommandBar client:load/>
-  <ThemeSelector client:load />
+  <!-- <ThemeSelector client:load /> -->
   </span>
 </nav>
