--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,6 +24,7 @@ const { pageTitle } = Astro.props;
   <body class="bg-neutral-50 text-neutral-950 dark:bg-neutral-950 dark:text-neutral-50">
     <div class="mx-auto max-w-screen-md px-4">
       <Navigation />
+      <hr class=" stroke-neutral-500 dark:opacity-25"/>
       <slot />
       <hr class="mb-4 stroke-neutral-500 dark:opacity-25"/>
       <Footer />
