--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -22,26 +22,13 @@ const {Content} = await post.render()
 <BaseLayout style={styles} pageTitle={post.data.title}>
   <div>
     {post.data.image ? <img src={post.data.image.src} alt={post.data.image.alt} /> : <></> }
-    <div class="textWrapper">
-    <h1 class={post.image ? '' : 'text-2xl font-semibold'}>{post.data.title}</h1>
-
+    <div class="">
+    <h1 class='text-3xl font-bold mt-2'>{post.data.title}</h1>
     {post.data.date && <p class="mb-6">Posted {formatDate(post.data.date)}</p>}
-    
-    <hr/>
-    <div class="content mb-12">
+    <br />
+    <div class="prose prose-neutral mx-auto max-w-none dark:prose-invert mb-12">
       <Content />
     </div>
     </div>
   </div>
 </BaseLayout>
-
-<style>
-  .textWrapper {
-    /* outline: 2px solid blue; */
-    margin: 0 auto;
-  }
-
-  .calendar-emoji {
-    font-style: normal;
-  }
-</style>
