--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -1,27 +1,128 @@
 ---
-import { formatDate, isWithinLastFortnite } from "../lib/utils";
-import { Icon } from "astro-icon";
-import { AlertCircle } from "lucide-react";
+import { formatDate, isWithinLastFortnite } from '../js/utils';
+import { Icon } from 'astro-icon';
+
+const darkBg = '#333';
+const lightBg = '#fff';
 const { date, href, title, description, last } = Astro.props;
 ---
 
-<a href={`/posts/${href}`} class="exempt-link">
-<div class="p-4 bg-neutral-200 hover:bg-neutral-300 dark:bg-neutral-800 hover:dark:bg-neutral-700">
+<div class={`${last ? 'last' : ''} container`}>
+  <a href={`/posts/${href}`}>
     <div class="wrapper">
-      <div class="flex justify-between items-baseline">
-        <div class="max-w-[80%]">
-          <h4 class="text-lg font-bold line-clamp-1 text-blue-700 dark:text-blue-300 hover:underline">{title}</h4>
+      <div class="post">
+        <div class="title">
+          <h4>{title}</h4>
         </div>
-        <div class="text-baseline flex">
-          {
-            isWithinLastFortnite(date) && (
-              <AlertCircle color={"red"} size={16} className={"self-center"}/>
-            )
-          }
-          <p class="text-xs opacity-75 whitespace-nowrap">{formatDate(date)}</p>
+        <div class="dateWrapper">
+          {isWithinLastFortnite(date) && <Icon name="mdi:alert-decagram-outline" size="16" color="red"/>}
+          <p class="date">{formatDate(date)}</p>
         </div>
       </div>
-      {description && <p class="line-clamp-2">{description}</p>}
+      { description && <p class="desc">{description}</p>}
     </div>
-  </div>
-</a>
+  </a>
+</div>
+
+<style define:vars={{ lightBg, darkBg }}>
+  p {
+    margin: 0;
+    padding: 0;
+  }
+
+  a {
+    color: inherit;
+  }
+
+  /* a:hover .wrapper {
+    outline: 2px dotted var(--primary-color);
+  } */
+
+  a:focus .wrapper {
+    outline: 2px dotted var(--primary-color);
+    background: var(--selection-color);
+  }
+
+  a:hover p {
+    box-shadow: none;
+    text-shadow: none;
+  }
+
+  a:focus p {
+    box-shadow: none;
+    text-shadow: none;
+  }
+
+  .wrapper {
+    border-radius: 8px;
+    padding: 0.75rem;
+    position: relative;
+  }
+
+  .post {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .date {
+    font-size: 0.75rem;
+    opacity: 0.75;
+  }
+
+  .last {
+    margin-bottom: 4rem;
+  }
+
+  .container {
+    border-radius: 0.5rem;
+  }
+
+  .container:hover,
+  .container:focus {
+    background: #e9e9e9;
+  }
+
+  :global(.dark)
+  .container:hover,
+  .container:focus {
+    background: #333333;
+  }
+
+  .title {
+    width: 70%;
+    display: flex;
+    align-items: center;
+  }
+
+  .title h4 {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 1.125rem;
+    font-weight: 600;
+  }
+
+  .dateWrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  .date {
+    min-width: 25%;
+    text-align: right;
+    white-space: nowrap;
+    margin-left: 0.5rem;
+  }
+
+  .desc {
+    font-size: 0.875rem;
+    margin-top: 0.5rem;
+  }
+
+  @media (min-width: 40rem) {
+    .title {
+      width: 75%;
+    }
+  }
+</style>
