--- a/src/components/Note.astro
+++ b/src/components/Note.astro
@@ -2,33 +2,37 @@
 const { emoji, type } = Astro.props;
 ---
 
-<div class={`px-4 py-0 flex ${type} note`}>
+<div class={`note ${type}`}>
   <div>
     <p class="emoji">{emoji}</p>
   </div>
   <div>
+    <!-- <p class="string">{string}</p> -->
     <slot />
   </div>
 </div>
 
 <style>
   .note {
-    border-radius: 4px;
+    padding: 0.1em 0.5em;
+    border-radius: 8px;
+    display: flex;
   }
 
   .secondary {
-    /* color: #888888; */
+    color: #888888;
     border: 1px solid #888888;
   }
 
   .technology {
-    /* color: #0070f3; */
+    /* background: #151e36; */
+    color: #0070f3;
     border: 1px solid #0070f3;
   }
 
   .warning {
-    /* color: #eaaa45; */
-    border: 1px solid #eaaa45;
+    color: #EAAA45;
+    border: 1px solid #EAAA45;
   }
 
   .emoji {
@@ -36,5 +40,10 @@ const { emoji, type } = Astro.props;
     vertical-align: text-top;
     left: 0.25em;
     margin-right: 1em;
+  }
+
+  .string {
+    position: relative;
+    left: 1rem;
   }
 </style>
