--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,9 @@
 ---
-import "../styles/global.css";
-import Navigation from "../components/Navigation.astro";
-import Footer from "../components/Footer.astro";
+import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+import Contact from '../components/Contact.astro';
+import Favicon from '../components/Favicon.astro';
 
 const { pageTitle } = Astro.props;
 ---
@@ -9,50 +11,48 @@ const { pageTitle } = Astro.props;
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <!-- <link rel="icon" href="/favicon.ico" sizes="any"> -->
+    <!-- <link rel="icon" href="/favicon.svg" type="image/svg+xml"> -->
+    <Favicon />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <meta property="og:image" content="/og.jpg" />
+    <meta property="og:image" content="/og.jpg">
     <meta
       name="description"
-      content="Trevor Lee | Software Developer from Vancouver, Canada | TypeScript, React, Next.js, Node.js"
+      content="Trevor Lee | Web Developer from Vancouver, Canada | TypeScript, React, Next.js, Node.js"
     />
     <title>{pageTitle}</title>
   </head>
-  <body class="bg-neutral-50 text-neutral-950 dark:bg-neutral-950 dark:text-neutral-50">
-    <div class="mx-auto max-w-screen-md px-4">
+  <body>
+    <div class="wrapper flow">
       <Navigation />
-      <hr class=" stroke-neutral-500 dark:opacity-25"/>
       <slot />
-      <hr class="mb-4 stroke-neutral-500 dark:opacity-25"/>
+      <Contact />
       <Footer />
     </div>
   </body>
-  
 </html>
 
 <script is:inline>
-    // On page load or when changing themes
-    const html = document.documentElement;
-    const systemPrefersDark = window.matchMedia(
-      "(prefers-color-scheme: dark)"
-    ).matches;
-
-    if (localStorage.theme === "dark") {
-      html.classList.add("dark");
-      html.classList.remove("light");
-    } else if (localStorage.theme === "light") {
-      html.classList.add("light");
-      html.classList.remove("dark");
-    } else {
-      if (systemPrefersDark) {
-        html.classList.add("dark");
-        html.classList.remove("light");
-      } else {
-        html.classList.add("light");
-        html.classList.remove("dark");
-      }
+  const theme = (() => {
+    if (
+      typeof localStorage !== 'undefined' &&
+      localStorage.getItem('theme')
+    ) {
+      return localStorage.getItem('theme');
     }
-  </script>
+    if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      return 'dark';
+    }
+    return 'light';
+  })();
+
+  if (theme === 'light') {
+    document.documentElement.classList.remove('dark');
+  } else {
+    document.documentElement.classList.add('dark');
+  }
+
+  window.localStorage.setItem('theme', theme);
+</script>
