--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -23,10 +23,10 @@ const {Content} = await post.render()
   <div>
     {post.data.image ? <img src={post.data.image.src} alt={post.data.image.alt} /> : <></> }
     <div class="">
-    <h1 class='text-3xl font-bold mt-2'>{post.data.title}</h1>
-    {post.data.date && <p class="mb-6">Posted {formatDate(post.data.date)}</p>}
+    <h1 class='text-3xl font-bold mt-6'>{post.data.title}</h1>
+    {post.data.date && <p class="mb-4">Posted {formatDate(post.data.date)}</p>}
     <br />
-    <div class="prose prose-neutral mx-auto max-w-none dark:prose-invert mb-12">
+    <div class="prose mx-auto max-w-none dark:prose-invert mb-12">
       <Content />
     </div>
     </div>
