--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:focus {
+  outline: 2px dashed #ff0080 !important;
+}
+
 body {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto
 }
