--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,7 +21,7 @@ const { pageTitle } = Astro.props;
     />
     <title>{pageTitle}</title>
   </head>
-  <body class="bg-neutral-50 text-neutral-950 dark:bg-neutral-950 dark:text-neutral-50">
+  <body class="bg-skin-gray6 text-skin-darkGray6 dark:bg-skin-darkGray6 dark:text-skin-gray6">
     <div class="mx-auto max-w-screen-md px-4">
       <Navigation />
       <hr class=" stroke-neutral-500 dark:opacity-25"/>
