--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,7 +8,7 @@ import { CommandBar } from "./CommandBar";
   class="flex justify-between align-middle py-4 h-13 my-4"
 >
   <span class="flex text-center">
-  <a class="exempt-link text-xl font-medium hover:bg-yellow-300 p-2 dark:hover:bg-yellow-400 dark:hover:text-black inter-only" href="/" aria-label="Go to homepage">
+  <a class="exempt-link text-xl font-medium hover:bg-skin-blue hover:text-skin-gray6 dark:hover:bg-skin-darkCyan p-2 dark:hover:text-black inter-only" href="/" aria-label="Go to homepage">
     trevortylerlee.com
   </a>
   </span>
