--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Marquee from '../components/Marquee.astro';
 import LatestPosts from '../components/LatestPosts.astro';
 
 const pageTitle = 'Trevor Lee | Homepage';
+
+// Test commit
 ---
 
 <BaseLayout pageTitle={pageTitle}>
