--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import ThemeSelector from "./ThemeSelector";
 
 <footer class="mb-4 flex justify-between">
   <div class="flex gap-4 self-center max-[420px]:flex-col max-[420px]:gap-2">
-    <a href="https://github.com/boogerbuttcheeks">Github</a>
+    <a href="https://github.com/trevortylerlee">Github</a>
     <a href="https://www.linkedin.com/in/trevortylerlee/">LinkedIn</a>
     <CopyButton client:visible copyText="trevortylerlee@gmail.com" label="trevortylerlee@gmail.com" />
   </div>
