style elements directly for localhost styling bug

--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -5,10 +5,9 @@
     <marquee
       aria-hidden="true"
       id="marq"
-      aria-hidden="true"
       scrolldelay="120"
       scrollamount="4"
-      class="z-20 relative pointer-events-none"
+      class="z-20 relative pointer-events-none mt-5"
     >
       <img src="/pokemon/magikarp.gif" alt="magikarp" />
     </marquee>
