--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,12 @@ import LatestPosts from '../components/LatestPosts.astro';
 
 const pageTitle = 'Trevor Lee | Homepage';
 
-// Test commit
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <div class="relative h-24 mb-10">
     <Marquee />
-    <h1 class="absolute text-3xl top-1/2 -translate-y-1/2 z-0 hover:z-30">Software developer interested in design.</h1>
+    <h1 class="mt-5 absolute text-3xl font-bold top-1/2 -translate-y-1/2 z-0 hover:z-30">Software developer interested in design.</h1>
   </div>
   <LatestPosts />
 </BaseLayout>
