--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -32,7 +32,7 @@ const { page } = Astro.props;
       />
     ))
   } -->
-  <div class="grid gap-4 ">
+  <div class="grid gap-4 mt-12">
     {
       page.data.map((post) => (
         <MorePost
