enhanced command menu btn, color and qol fixes

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,5 +3,5 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout pageTitle="About me, Trevor Lee">
-<p class="mb-10">I'm a software developer from Vancouver, Canada. I enjoy designing and building accessible, inclusive web applications.</p>
+<p class="py-16">I'm a software developer from Vancouver, Canada. I enjoy designing and building accessible, inclusive web applications.</p>
 </BaseLayout>
