--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -1,17 +1,17 @@
 ---
 ---
 
-  <span class='container'>
-    <marquee
-      aria-hidden="true"
-      id="marq"
-      scrolldelay="120"
-      scrollamount="4"
-      class="z-20 relative pointer-events-none mt-5"
-    >
-      <img src="/pokemon/magikarp.gif" alt="magikarp" />
-    </marquee>
-  </span>
+<span class="container">
+  <marquee
+    aria-hidden="true"
+    id="marq"
+    scrolldelay="120"
+    scrollamount="4"
+    class="pointer-events-none relative z-20 mt-5"
+  >
+    <img src="/pokemon/magikarp.gif" alt="magikarp" />
+  </marquee>
+</span>
 
 <style>
   .container {
