--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,10 +5,14 @@ const pageTitle = "Trevor Lee | Homepage";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <div class="grid justify-center text-center h-24 mb-36">
-      <img class="mx-auto" src="/pokemon/pikachu.gif" alt="Pikachu apologizing profusely." />
-      <h1 class="title">404 Error</h1>
-      <p>This page isn't available. Sorry.</p>
-      <a class="mt-4" href="/">Go Home</a>
+  <div class="mb-36 grid h-24 justify-center text-center">
+    <img
+      class="mx-auto"
+      src="/pokemon/pikachu.gif"
+      alt="Pikachu apologizing profusely."
+    />
+    <h1 class="title">404 Error</h1>
+    <p>This page isn't available. Sorry.</p>
+    <a class="mt-4" href="/">Go Home</a>
   </div>
 </BaseLayout>
