--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -1,24 +1,37 @@
 ---
 import { formatDate, isWithinLastFortnite } from "../lib/utils";
 import { AlertCircle, Circle } from "lucide-react";
-import { Badge } from "./ui/badge"
+import { Badge } from "./ui/badge";
 const { date, href, title, description, last } = Astro.props;
 ---
 
 <a href={`/posts/${href}`} class="exempt-link">
-<div class="relative p-4 bg-skin-gray5 hover:bg-skin-gray4 dark:bg-skin-darkGray5 hover:dark:bg-skin-darkGray4">
+  <div
+    class="relative bg-skin-gray5 p-4 hover:bg-skin-gray4 dark:bg-skin-darkGray5 hover:dark:bg-skin-darkGray4"
+  >
     {
       isWithinLastFortnite(date) && (
-        <Circle fill="#ff3a30" stroke="#ff3a30" size={12} className={"absolute -top-1.5 -right-1.5"}/>
+        <Circle
+          fill="#ff3a30"
+          stroke="#ff3a30"
+          size={12}
+          className={"absolute -right-1.5 -top-1.5"}
+        />
       )
     }
     <div class="wrapper">
-      <div class="flex justify-between items-baseline">
+      <div class="flex items-baseline justify-between">
         <div class="max-w-[80%]">
-          <h4 class="text-lg font-bold line-clamp-1 mr-1 text-skin-blue dark:text-skin-darkCyan hover:underline">{title}</h4>
+          <h4
+            class="mr-1 line-clamp-1 text-lg font-bold text-skin-blue hover:underline dark:text-skin-darkCyan"
+          >
+            {title}
+          </h4>
         </div>
         <div class="flex">
-          <p class="text-xs opacity-75 whitespace-nowrap self-baseline">{formatDate(date)}</p>
+          <p class="self-baseline whitespace-nowrap text-xs opacity-75">
+            {formatDate(date)}
+          </p>
         </div>
       </div>
       {description && <p class="line-clamp-2">{description}</p>}
