--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,8 +9,8 @@ const { pageTitle } = Astro.props;
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
@@ -21,38 +21,39 @@ const { pageTitle } = Astro.props;
     />
     <title>{pageTitle}</title>
   </head>
-  <body class="bg-skin-gray6 text-skin-darkGray6 dark:bg-skin-darkGray6 dark:text-skin-gray6">
+  <body
+    class="bg-skin-gray6 text-skin-darkGray6 dark:bg-skin-darkGray6 dark:text-skin-gray6"
+  >
     <div class="mx-auto max-w-screen-md px-4">
       <Navigation />
-      <hr class=" stroke-neutral-500 dark:opacity-25"/>
+      <hr class="stroke-neutral-500 dark:opacity-25" />
       <slot />
-      <hr class="mb-4 stroke-neutral-500 dark:opacity-25"/>
+      <hr class="mb-4 stroke-neutral-500 dark:opacity-25" />
       <Footer />
     </div>
   </body>
-  
 </html>
 
 <script is:inline>
-    // On page load or when changing themes
-    const html = document.documentElement;
-    const systemPrefersDark = window.matchMedia(
-      "(prefers-color-scheme: dark)"
-    ).matches;
+  // On page load or when changing themes
+  const html = document.documentElement;
+  const systemPrefersDark = window.matchMedia(
+    "(prefers-color-scheme: dark)"
+  ).matches;
 
-    if (localStorage.theme === "dark") {
+  if (localStorage.theme === "dark") {
+    html.classList.add("dark");
+    html.classList.remove("light");
+  } else if (localStorage.theme === "light") {
+    html.classList.add("light");
+    html.classList.remove("dark");
+  } else {
+    if (systemPrefersDark) {
       html.classList.add("dark");
       html.classList.remove("light");
-    } else if (localStorage.theme === "light") {
+    } else {
       html.classList.add("light");
       html.classList.remove("dark");
-    } else {
-      if (systemPrefersDark) {
-        html.classList.add("dark");
-        html.classList.remove("light");
-      } else {
-        html.classList.add("light");
-        html.classList.remove("dark");
-      }
     }
-  </script>
+  }
+</script>
