--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@
     --orange: rgb(255 149 0);
     --yellow: rgb(255 204 0);
     --green: rgb(40 205 65);
-    --mint: rgb( 0 199 190);
+    --mint: rgb(0 199 190);
     --teal: rgb(89 173 196);
     --cyan: rgb(85 190 240);
     --blue: rgb(0 122 255);
@@ -41,7 +41,7 @@
     --dark-green: rgb(50 215 75);
     --dark-mint: rgb(102 212 207);
     --dark-teal: rgb(106 196 220);
-    --dark-cyan: rgb( 90 200 245);
+    --dark-cyan: rgb(90 200 245);
     --dark-blue: rgb(10 132 255);
     --dark-indigo: rgb(94 92 230);
     --dark-purple: rgb(191 90 242);
@@ -59,7 +59,7 @@ input:focus-visible {
 }
 
 body {
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto;
 }
 
 h1 {
@@ -75,7 +75,7 @@ h3 {
 }
 
 figcaption {
-  @apply text-center text-sm opacity-75 ;
+  @apply text-center text-sm opacity-75;
 }
 
 li {
