--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,23 +1,27 @@
 ---
-// import ThemeSelector from "../components/ThemeSelector";
-import { CommandBar } from "./CommandBar";
+import ThemeToggle from "./ThemeToggle.tsx";
+import PrimarySelector from "./PrimarySelector.tsx";
 ---
 
-<nav
-  aria-label="Main Navigation"
-  class="h-13 my-4 flex justify-between py-4 align-middle"
->
-  <span class="flex text-center">
-    <a
-      class="exempt-link inter-only p-2 text-xl font-medium hover:bg-skin-blue hover:text-skin-gray6 dark:hover:bg-skin-darkCyan dark:hover:text-black"
-      href="/"
-      aria-label="Go to homepage"
+    <nav
+      aria-label="Main Navigation"
+      class="h-13 flex justify-between py-4 align-middle font-content"
     >
-      trevortylerlee.com
-    </a>
-  </span>
-  <span class="flex gap-2">
-    <CommandBar client:load />
-    <!-- <ThemeSelector client:load /> -->
-  </span>
-</nav>
+      <span class="flex text-center">
+        <a
+          class="p-2 text-xl font-medium hover:bg-primary/50 hover:text-content"
+          href="/"
+          aria-label="Go to homepage"
+        >
+          trevortylerlee.com
+        </a>
+      </span>
+      <span class="flex items-center gap-2">
+        <span class="h-11 w-11">
+          <PrimarySelector client:load/>
+        </span>
+        <span class="h-11 w-11">
+          <ThemeToggle client:only/>
+        </span>
+      </span>
+    </nav>
