--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,55 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Marquee from "../components/Marquee.astro";
-import LatestPosts from "../components/LatestPosts.astro";
+import Post from "../components/Post.tsx"
+
+import { animate } from 'motion'
+
+// Wait til react-hot-toast supports multiple instances
+// https://github.com/timolins/react-hot-toast/issues/158
+import CopyButton from "../components/CopyButton"
 
 const pageTitle = "Trevor Lee | Homepage";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <div class="relative mb-10 h-24">
-    <Marquee />
-    <h1
-      class="absolute top-1/2 z-0 mt-5 -translate-y-1/2 text-3xl font-bold hover:z-30"
-    >
-      Software developer interested in design.
-    </h1>
-  </div>
-  <LatestPosts />
+    <div class="text-2xl leading-relaxed py-8 animate-in fade-in-0 duration-1000 font-content">
+        Software developer and designer. Currently working at <strong class="text-primary"><a href="#">COMC</a></strong> and studying Digital Design and Development at BCIT.
+        <br />
+        <br />
+        Graduating June 2023 :)
+    </div>
+    <div class="flex justify-center">
+        <div class="border-none bg-primary/10 w-0.5 h-0" style="height: 20vh"></div>
+    </div>
+    <div id="posts" class="py-8 relative grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div class="flex flex-col">
+        <Post
+            client:load
+            date="December 2022"
+            title="Text 2 Array"
+            description="I'm tired of typing out arrays."
+            link="Check it out"
+            href="#"
+            src="/posts/t2a.jpg"
+            alt="The acronym t2a being spread into an array that contains the elements t, 2, and a."
+        />
+        </div>
+        <div class="flex flex-col">
+        <Post
+            client:load
+            date="November 2022"
+            title="Phished"
+            description="Send customizable phishing emails and track their metrics. Educational purposes only."
+            link="Go Phishing"
+            href="#"
+            src="/posts/phished-screenshot.jpg"
+            alt="A tablet and smartphone are next to each other, each displaying a screenshot from the Phished website. The Phished logo, a fish with an envelope for a body, is displayed on the right with the Phished wordmark."
+        />
+        </div>
+    </div>
+    <div class="grid justify-center relative">
+        <div class="border-none bg-primary/10 w-0.5 h-0" style="height: 10vh"></div>
+        <div class="border-none bg-primary/10 w-0.5 h-0 mb-8" style="height: 10vh"></div>
+    </div>
+
 </BaseLayout>
