--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -24,8 +24,8 @@ const {Content} = await post.render()
     {post.data.image ? <img src={post.data.image.src} alt={post.data.image.alt} /> : <></> }
     <div class="">
     <h1 class='text-3xl font-bold mt-6'>{post.data.title}</h1>
-    {post.data.date && <p class="mb-4">Posted {formatDate(post.data.date)}</p>}
-    <br />
+    {post.data.date && <p class="mb-8">Posted {formatDate(post.data.date)}</p>}
+    <hr class="mb-8 stroke-neutral-500 dark:opacity-25"/>
     <div class="prose mx-auto max-w-none dark:prose-invert mb-12">
       <Content />
     </div>
