--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,80 +1,120 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"); */
-/* @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap'); */
-/* @import url("https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap"); */
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   :root {
-    --gray-1: rgb(142 142 147);
-    --gray-2: rgb(174 174 178);
-    --gray-3: rgb(199 199 204);
-    --gray-4: rgb(209 209 214);
-    --gray-5: rgb(229 229 234);
-    --gray-6: rgb(242 242 247);
+    --gray-1: 242 242 247;
+    --gray-2: 229 229 234;
+    --gray-3: 209 209 214;
+    --gray-4: 199 199 204;
+    --gray-5: 174 174 178;
+    --gray-6: 142 142 147;
+    --gray-7: 99 99 102;
+    --gray-8: 72 72 74;
+    --gray-9: 58 58 60;
+    --gray-10: 44 44 46;
+    --gray-11: 28 28 30;
 
-    --dark-gray-1: rgb(142 142 147);
-    --dark-gray-2: rgb(99 99 102);
-    --dark-gray-3: rgb(72 72 74);
-    --dark-gray-4: rgb(58 58 60);
-    --dark-gray-5: rgb(44 44 46);
-    --dark-gray-6: rgb(28 28 30);
+    --red: 255 69 58;
+    --orange: 255 159 10;
+    --yellow: 255 214 10;
+    --green: 50 215 75;
+    --mint: 102 212 207;
+    --teal: 106 196 220;
+    --cyan: 90 200 245;
+    --blue: 10 132 255;
+    --indigo: 94 92 230;
+    --purple: 191 90 242;
+    --pink: 255 55 95;
+    --brown: 172 142 104;
 
-    --red: rgb(255 49 48);
-    --orange: rgb(255 149 0);
-    --yellow: rgb(255 204 0);
-    --green: rgb(40 205 65);
-    --mint: rgb(0 199 190);
-    --teal: rgb(89 173 196);
-    --cyan: rgb(85 190 240);
-    --blue: rgb(0 122 255);
-    --indigo: rgb(88 86 214);
-    --purple: rgb(175 82 222);
-    --pink: rgb(255 45 85);
-    --brown: rgb(162 132 94);
-
-    --dark-red: rgb(255 69 58);
-    --dark-orange: rgb(255 159 10);
-    --dark-yellow: rgb(255 214 10);
-    --dark-green: rgb(50 215 75);
-    --dark-mint: rgb(102 212 207);
-    --dark-teal: rgb(106 196 220);
-    --dark-cyan: rgb(90 200 245);
-    --dark-blue: rgb(10 132 255);
-    --dark-indigo: rgb(94 92 230);
-    --dark-purple: rgb(191 90 242);
-    --dark-pink: rgb(255 55 95);
-    --dark-brown: rgb(172 142 104);
+    --background: var(--gray-11);
+    --content: var(--gray-1);
+    --primary: var(--blue)
   }
-}
 
-:focus-visible {
-  outline: 2px dashed #ff0080;
-}
+  .light{
+    --background: var(--gray-1);
+    --content: var(--gray-11);
 
-input:focus-visible {
-  outline: none;
+    --red: 255 49 48;
+    --orange: 255 149 0;
+    --yellow: 255 204 0;
+    --green: 40 205 65;
+    --mint: 0 199 190;
+    --teal: 89 173 196;
+    --cyan: 85 190 240;
+    --blue: 0 122 255;
+    --indigo: 88 86 214;
+    --purple: 175 82 222;
+    --pink: 255 45 85;
+    --brown: 162 132 94;
+  }
+
+  :root[data-theme="red"] {
+    --primary: var(--red)
+  }
+
+  :root[data-theme="orange"] {
+    --primary: var(--orange)
+  }
+
+  :root[data-theme="yellow"] {
+    --primary: var(--yellow)
+  }
+
+  :root[data-theme="green"] {
+    --primary: var(--green)
+  }
+
+  :root[data-theme="mint"] {
+    --primary: var(--mint)
+  }
+
+  :root[data-theme="teal"] {
+    --primary: var(--teal)
+  }
+
+  :root[data-theme="cyan"] {
+    --primary: var(--cyan)
+  }
+
+  :root[data-theme="blue"] {
+    --primary: var(--blue)
+  }
+
+  :root[data-theme="indigo"] {
+    --primary: var(--indigo)
+  }
+
+  :root[data-theme="purple"] {
+    --primary: var(--purple)
+  }
+
+  :root[data-theme="pink"] {
+    --primary: var(--pink)
+  }
+
+  :root[data-theme="brown"] {
+    --primary: var(--brown)
+  }
 }
 
 body {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto;
 }
 
-h1 {
-  @apply text-2xl font-bold;
+::selection {
+  background-color: rgb(var(--content));
+  color: rgb(var(--background));
 }
 
-h2 {
-  @apply text-xl font-bold;
+#atropos {
+  
 }
 
-h3 {
-  @apply text-lg font-bold;
-}
-
-figcaption {
+/* figcaption {
   @apply text-center text-sm opacity-75;
 }
 
@@ -112,4 +152,4 @@ img {
   .exempt-link {
     @apply text-neutral-950 no-underline dark:text-neutral-50;
   }
-}
+} */
