--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,28 +16,9 @@
     --gray-10: 44 44 46;
     --gray-11: 28 28 30;
 
-    --red: 255 69 58;
-    --orange: 255 159 10;
-    --yellow: 255 214 10;
-    --green: 50 215 75;
-    --mint: 102 212 207;
-    --teal: 106 196 220;
-    --cyan: 90 200 245;
-    --blue: 10 132 255;
-    --indigo: 94 92 230;
-    --purple: 191 90 242;
-    --pink: 255 55 95;
-    --brown: 172 142 104;
-
-    --background: var(--gray-11);
-    --content: var(--gray-1);
-    --primary: var(--blue)
-  }
-
-  .light{
     --background: var(--gray-1);
     --content: var(--gray-11);
-
+    
     --red: 255 49 48;
     --orange: 255 149 0;
     --yellow: 255 204 0;
@@ -51,58 +32,6 @@
     --pink: 255 45 85;
     --brown: 162 132 94;
   }
-
-  :root[data-theme="red"] {
-    --primary: var(--red)
-  }
-
-  :root[data-theme="orange"] {
-    --primary: var(--orange)
-  }
-
-  :root[data-theme="yellow"] {
-    --primary: var(--yellow)
-  }
-
-  :root[data-theme="green"] {
-    --primary: var(--green)
-  }
-
-  :root[data-theme="mint"] {
-    --primary: var(--mint)
-  }
-
-  :root[data-theme="teal"] {
-    --primary: var(--teal)
-  }
-
-  :root[data-theme="cyan"] {
-    --primary: var(--cyan)
-  }
-
-  :root[data-theme="blue"] {
-    --primary: var(--blue)
-  }
-
-  :root[data-theme="indigo"] {
-    --primary: var(--indigo)
-  }
-
-  :root[data-theme="purple"] {
-    --primary: var(--purple)
-  }
-
-  :root[data-theme="pink"] {
-    --primary: var(--pink)
-  }
-
-  :root[data-theme="brown"] {
-    --primary: var(--brown)
-  }
-}
-
-body {
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto;
 }
 
 ::selection {
@@ -110,8 +39,9 @@ body {
   color: rgb(var(--background));
 }
 
-#atropos {
-  
+[href] {
+  color: rgb(var(--blue));
+  text-decoration: underline;
 }
 
 /* figcaption {
