--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import CopyButton from "../components/CopyButton";
 ---
 
-<footer class=" mt-8 mb-8 flex justify-between font-content">
+<footer class=" mt-4 mb-4 flex justify-between font-content px-2">
   <div class="flex gap-4 self-center max-[420px]:flex-col max-[420px]:gap-2">
     <a href="https://github.com/trevortylerlee" class="text-skin-blue underline"
       >Github</a
